--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
+        <link rel="icon" type="image/png" href="http://a69.g.akamai.net/n/69/10688/v1/img5.allocine.fr/acmedia/medias/nmedia/18/99/69/59/20619342.jpg" />
+        <link href='http://fonts.googleapis.com/css?family=Raleway:400,900,100,200,700,800' rel='stylesheet' type='text/css'>
         <!-- build:css styles/vendor.css -->
         <!-- bower:css -->
         <!-- endbower -->
@@ -21,18 +22,50 @@
         <!-- endbuild -->
     </head>
     <body>
-        <!--[if lt IE 10]>
+	    <nav class="navbar navbar-default" role="navigation">
+        	<div class="center">
+        		<span class="glyphicon glyphicon-refresh refresh"></span>
+        	</div>
+  			<div class="container-fluid">
+			    <div class="navbar-header">
+		        	<p>Nombre de clicks: <span class="nbClicks"></span></p>
+			    </div>
+
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      	<ul class="nav navbar-nav navbar-right">
+			      	<h1>Memory<span>.</span></h1>
+		      	</ul>
+		    	</div><!-- /.navbar-collapse -->
+	  		</div><!-- /.container-fluid -->
+		</nav>
+	        <!--[if lt IE 10]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="container">
         	<div class="row">
-	        	<h1>Memory</h1>
-	        	<div class="row col-md-12 tuiles-container">
+	        	<div class="containers">
+		        	<div class="row col-md-12 tuiles-container">
 
+		        	</div>
 	        	</div>
-	    		<p>Nombre de clicks: <span class='nbClicks'></span></p>
+        	</div>
+        	<div class="row">
+	        	<div class="containers">
+		        	<div class="row col-md-12 tuiles-container">
+		        		
+		        	</div>
+	        	</div>
+        	</div>
+        	<div class="row">
+	        	<div class="containers">
+		        	<div class="row col-md-12 tuiles-container">
+		        		
+		        	</div>
+	        	</div>
         	</div>
         </div>
+
 
 
         <!-- build:js scripts/vendor.js -->
